update config.yml and list.html create a new css file to make sure heart svg, line number and item on the same line

--- a/config.yml
+++ b/config.yml
@@ -6,6 +6,11 @@ params:
   # Disable PaperMod features we don’t need
   homeInfoParams: false
   socialIcons: false
+  # ...保留其他參數
+  assets:
+    css:
+      - extended/custom.css
+
 
 disableKinds:
   - taxonomy
