--- a/config.yml
+++ b/config.yml
@@ -6,6 +6,9 @@ params:
   # Disable PaperMod features we don’t need
   homeInfoParams: false
   socialIcons: false
+  defaultTheme: light # Force light mode
+  disableThemeToggle : true # Disable the theme toggle button
+
   # ...保留其他參數
   assets:
     css:
