change language code, change title

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: https://example.org/
-languageCode: en-us
-title: My New Hugo Site
+baseURL: https://bac.ketli.st/
+languageCode: zh-tw
+title: 和妳做的100件事
 theme: ["PaperMod"]
